--- a/index.html
+++ b/index.html
@@ -6,36 +6,137 @@
   <title>Biker Zone</title>
   <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- google fonts Popins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- Tailwind Castom Classes -->
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                        'bike-primary': '#E76F51',
+                        'bike-primary-bg': 'rgba(231,111,81,0.10)',
+                    }
+                }
+            }
+        }
+    </script>
+    <!-- Castom style -->
+    <style>
+        .font-poppins{
+            font-family: 'Poppins', sans-serif;
+        }
+    </style>
 </head>
-<body>
-  <header>
+<body class="font-poppins">
+  <header class="md:container md:mx-auto">
     <nav>
         <div class="navbar bg-base-100">
-  <div class="navbar-start">
+  <div class="flex-1">
     <div class="dropdown">
       <label tabindex="0" class="btn btn-ghost lg:hidden">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
       </label>
-      <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-        <li><a>Item 1</a></li>
-        <li><a>Item 2</a></li>
-        <li><a>Item 3</a></li>
+      <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 font-bold">
+        <li><a>Home</a></li>
+        <li><a>Shop</a></li>
+        <li><a>News</a></li>
+        <li><a>Contact </a></li>
       </ul>
     </div>
-    <a class="btn btn-ghost normal-case text-xl">Biker Zone</a>
+    <a class="btn btn-ghost normal-case text-4xl font-extrabold">Biker Zone</a>
   </div>
-  <div class="navbar-center hidden lg:flex">
+  <div class="navbar-center hidden lg:flex font-bold">
     <ul class="menu menu-horizontal px-1">
-      <li><a>Item 1</a></li>
-      <li><a>Item 2</a></li>
-      <li><a>Item 3</a></li>
+      <li><a>Home</a></li>
+      <li><a>Shop</a></li>
+      <li><a>News</a></li>
+      <li><a>Contact </a></li>
     </ul>
   </div>
-  <div class="navbar-end">
-    <a class="btn">Button</a>
+  <div class="">
+    <a class="btn btn-error text-[#ffffff]">Login</a>
   </div>
 </div>
     </nav>
+    <!-- Slider Carousel -->
+    <!-- slider 1 -->
+    <div class="carousel w-full lg:h-[550px] bg-bike-primary-bg">
+        <div id="slide1" class="carousel-item relative w-full">
+          <div class="flex flex-col lg:flex-row p-4 lg:p-24">
+            <div class="space-y-7 flex-1">
+                <h2 class="text-xl lg:text-6xl font-bold">Ride-on R15 V4 <br> With Smile</h2>
+                <p class="text-gray-950 text-sm"></p>Amet minim mollit non deserunt ullamco 
+                    est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.<p>
+                <button class="btn bg-bike-primary text-white rounded-full">Purchase</button>
+            </div>
+            <div class="flex-1">
+                <img  src="/images/slider/bike1.png" class="w-[400px]" />
+            </div>
+          </div>
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide4" class="btn btn-circle">❮</a> 
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div> 
+        <!-- slider 2 -->
+        <div id="slide2" class="carousel-item relative w-full lg:h-[550px] bg-bike-primary-bg">
+            <div class="flex flex-col lg:flex-row p-4 lg:p-24">
+                <div class="space-y-7 flex-1">
+                    <h2 class="text-xl lg:text-6xl font-bold">Ride-on R15 V4 <br> With Smile</h2>
+                    <p class="text-gray-950 text-sm">Amet minim mollit non deserunt ullamco 
+                        est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.<p>
+                    <button class="btn bg-bike-primary text-white rounded-full">Purchase</button>
+                </div>
+                <div class="flex-1">
+                    <img  src="/images/slider/bike2.png" class="w-[400px]" />
+                </div>
+              </div>
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide1" class="btn btn-circle">❮</a> 
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
+        </div> 
+        <!-- slider 3 -->
+        <div id="slide3" class="carousel-item relative w-full lg:h-[550px] bg-bike-primary-bg">
+            <div class="flex flex-col lg:flex-row p-4 lg:p-24">
+                <div class="space-y-7 flex-1">
+                    <h2 class="text-xl lg:text-6xl font-bold">Ride-on R15 V4 <br> With Smile</h2>
+                    <p class="text-gray-950 text-sm">Amet minim mollit non deserunt ullamco 
+                        est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.<p>
+                    <button class="btn bg-bike-primary text-white rounded-full">Purchase</button>
+                </div>
+                <div class="flex-1">
+                    <img  src="/images/slider/bike3.png" class="w-[400px]" />
+                </div>
+              </div>
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide2" class="btn btn-circle">❮</a> 
+            <a href="#slide4" class="btn btn-circle">❯</a>
+          </div>
+        </div> 
+        <!-- slider 4 -->
+        <div id="slide4" class="carousel-item relative w-full lg:h-[550px] bg-bike-primary-bg">
+            <div class="flex flex-col lg:flex-row p-4 lg:p-24">
+                <div class="space-y-7 flex-1">
+                    <h2 class="text-xl lg:text-6xl font-bold">Ride-on R15 V4 <br> With Smile</h2>
+                    <p class="text-gray-950 text-sm">Amet minim mollit non deserunt ullamco 
+                        est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.<p>
+                    <button class="btn bg-bike-primary text-white rounded-full">Purchase</button>
+                </div>
+                <div class="flex-1">
+                    <img  src="/images/slider/bike4.png" class="w-[400px]" />
+                </div>
+              </div>
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide3" class="btn btn-circle">❮</a> 
+            <a href="#slide1" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+      </div>
   </header>
   <main>
 
